<resources>
    <string name="app_name">Mi primera app</string>
    <string name="de_donaciones">de donaciones</string>
    <string name="fundacion_dar">Fundacion Dar</string>
    <string name="registrar">Registrar</string>
    <string name="a_adir_informacion1">Añadir Informacion</string>
    <string name="button">Button</string>
    <string name="sistema_de_registro">Sistema de Registro</string>
    <string name="registro_de_informacion">Registro de Informacion</string>
    <string name="donacion1">Donacion</string>
    <string name="categoria">Categoria</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="retirar_donacion">Retirar Donacion</string>
    <string name="todo">TODO</string>
    <string name="retiro_de_donaciones">Retiro de donaciones</string>
    <string name="retiro_para_comunidades">Retiro para comunidades</string>
    <string name="retiro_por_da_os">Retiro por daños</string>
    <string name="atras">Atras</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="tipo_de_donacion">Tipo de donacion</string>
    <string name="registro_de_donaciones">Registro de donaciones</string>
    <string name="retiro_de_donacion_por_da_o">Retiro de Donacion por Daño</string>
    <string name="ubicacions">Ubicacion:</string>
    <string name="retiro_de_donacion">Retiro de donacion</string>
    <string name="para_comunidades">para comunidades</string>
    <string name="a_adir1">Añadir</string>
    <string name="a_adir_categoria">Añadir Categoria</string>
    <string name="a_adir_informacion">Añadir Informacion</string>
    <string name="donacion">Donacion</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="imagen">Imagen</string>
    <string name="cargar">Cargar</string>
    <string name="name">Name</string>
    <string name="name2">Name</string>
    <string name="a_adir2">Añadir</string>
    <string name="a_adir_ubicacion">Añadir Ubicacion</string>
    <string name="a_adir">Añadir</string>
    <string name="por_da_o">por daño</string>
    <string name="name3">Name</string>
    <string name="fecha_de_expiracion">Fecha de Expiracion</string>
    <string name="agregar">Agregar</string>
    <string name="name4">Name</string>
</resources>
